# rules_oxc

./: .bazelrc  MODULE.bazel
docs/: BUILD.bazel
oxc/: BUILD.bazel  defs.bzl
oxc/private/: BUILD.bazel  Cargo.toml  dts_transpiler.bzl  transpiler.rs
