load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "transpiler",
    srcs = ["transpiler.rs"],
    deps = [
        "@crates//:oxc_allocator",
        "@crates//:oxc_codegen",
        "@crates//:oxc_diagnostics",
        "@crates//:oxc_isolated_declarations",
        "@crates//:oxc_parser",
        "@crates//:oxc_span",
    ],
)

package(default_visibility = ["//visibility:public"])
